hard-gists/900514/run.log
=== Docker Run Log for 900514 ===
Started at: Mi 29. Okt 18:16:20 CET 2025

[2025-10-29 18:16:21] START: Running container for 900514
[2025-10-29 18:16:21] SUCCESS: Container bd256fa6543813ebf67e35be8e6f09f2a4bd75a7b2578d1e520d86ff020cab68 started for 900514
=== Container logs for 900514 ===
  File "/snippet.py", line 34
    print target
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 900514 ===
[2025-10-29 18:16:23] INFO: Container bd256fa6543813ebf67e35be8e6f09f2a4bd75a7b2578d1e520d86ff020cab68 has stopped
